--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "description": "Load gifs from Giphy to annoy people",
   "main": "app.js",
   "scripts": {
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@slack/bolt": "^3.7.0",
     "axios": "^0.23.0",
     "express": "^4.17.1"
   }
