--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@slack/bolt": "^3.7.0",
     "axios": "^0.23.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   }
 }
